<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background_app_todo"
    android:padding="16dp">

    <EditText
        android:hint="@string/todo_dialog_addtask"
        android:id="@+id/etTask"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white">
    </EditText>
<RadioGroup
    android:id="@+id/rgCategories"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/rbBusiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_dialog_rbBusiness"
        android:checked="true"
        android:textColor="@color/white"
        android:buttonTint="@color/business_category"
        >

    </RadioButton>
    <RadioButton
        android:id="@+id/rbPersonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_dialog_rbPersonal"

        android:textColor="@color/white"
        android:buttonTint="@color/personal_category"
        >

    </RadioButton>
    <RadioButton
        android:id="@+id/rbOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_dialog_rbOther"

        android:textColor="@color/white"
        android:buttonTint="@color/other_category"
        >

    </RadioButton>
</RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent"
        android:text="@string/todo_dialog_btnAddTask"
        android:textColor="@color/white"
        >

    </androidx.appcompat.widget.AppCompatButton>

</LinearLayout>