<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        app:tint="@color/white"
        app:backgroundTint="@color/accent"
        app:fabSize="normal"
        android:contentDescription="@string/todo_dialog_btnAddTask"
        android:src="@android:drawable/ic_input_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="42dp"/>

<LinearLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TODOapp.TodoActivity"
    android:orientation="vertical"
    android:background="@color/background_app_todo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_title"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:layout_marginVertical="44dp"
        android:layout_marginHorizontal="32dp">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_subtitle"
        style="@style/todoSubtitle"
    >

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_task"
        style="@style/todoSubtitle"
        android:layout_marginTop="24dp">

    </TextView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTasks"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp">

    </androidx.recyclerview.widget.RecyclerView>



</LinearLayout>
</FrameLayout>